Header and Banner Start

--- a/index.html
+++ b/index.html
@@ -2,15 +2,34 @@
 <html>
     <head>
         <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com"> 
+        <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@200;400&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com"> 
+        <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@200;400&family=Quicksand:wght@300;600;700&display=swap" rel="stylesheet">
         <link href="resources/CSS/style.css" type="text/css" rel="stylesheet">
     </head>
     <!--Header-->
-    <div class="header">
-        <div class="colmarlogo">
-            <img url="resources/images/ic-logo.svg">Colmar Academy
-        </div>
+<header>
+    <div class="header-left">
+            <img src="resources/images/ic-logo.svg" alt="Colmar Academy" height="50px">
+            <a><span class="colmar"><strong>COLMAR</strong></span><span class="academy">ACADEMY</span></a>
     </div>
-<body>
+    <nav class ="navbar">
+        <ul>
+            <li>On Campus</li>
+            <li class="navlist">Online</li>
+            <li class="navlist">For Companies</li>
+            <li class="navlist">Sign In</li>
+        </ul>
+    </nav>
+</header>
 
-</body>
+<!--Section 1 Learn Something New-->
+<div class="learnsection">
+    <img src="resources/images/banner.jpg" alt="Learn Something New Everyday">
+    <p class="heading">Learn something new everyday</p>
+
+</div>
+
+
 </html>
